--- a/app/src/main/res/layout/activity_choose_spell.xml
+++ b/app/src/main/res/layout/activity_choose_spell.xml
@@ -13,9 +13,15 @@
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="match_parent">
 
-            />
+            <Button
+                android:background=""
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_column="1"
+                android:layout_row="2"/>
+        </TableRow>
 
         <TableRow
             android:layout_width="match_parent"
