--- a/app/src/main/res/layout/activity_choose_spell.xml
+++ b/app/src/main/res/layout/activity_choose_spell.xml
@@ -1,38 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/coordinatorLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center_vertical|center_horizontal"
+    android:orientation="vertical"
     tools:context=".ChooseSpell">
 
-    <TableLayout
+
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical|center_horizontal"
+        android:orientation="horizontal"
+        tools:context=".ChooseSpell">
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+        <Button
+            android:id="@+id/button"
+            android:layout_width="wrap_content"
+            android:layout_height="173dp"
+            android:layout_marginTop="56dp"
+            android:onClick="sendMessage"
+            android:text="Wizard 1" />
+    </LinearLayout>
 
-            <Button
-                android:background=""
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_column="1"
-                android:layout_row="2"/>
-        </TableRow>
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical|center_horizontal"
+        android:orientation="horizontal"
+        tools:context=".ChooseSpell">
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="88dp"
+            android:layout_height="173dp"
+            android:layout_marginTop="56dp"
+            android:layout_marginEnd="40dp"
+            android:onClick="sendMessage"
+            android:text="Wizard 2" />
+    </LinearLayout>
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical|center_horizontal"
+        android:orientation="horizontal"
+        tools:context=".ChooseSpell">
+        <Button
+            android:id="@+id/button3"
+            android:layout_width="88dp"
+            android:layout_height="173dp"
+            android:layout_marginTop="56dp"
+            android:layout_marginEnd="16dp"
+            android:onClick="sendMessage"
+            android:text="Wizard 3" />
+    </LinearLayout>
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-    </TableLayout>
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
