--- a/app/src/main/res/layout/activity_coin_flip.xml
+++ b/app/src/main/res/layout/activity_coin_flip.xml
@@ -1,9 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".CoinFlip">
 
-</android.support.constraint.ConstraintLayout>
+    <ImageView
+        android:id="@+id/coin"
+        android:layout_width="200sp"
+        android:layout_height="200sp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="120sp"
+        android:src="@drawable/heads_removebg_preview">
+
+    </ImageView>
+
+    <Button
+        android:id="@+id/flipButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/coin"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="68sp"
+        android:text="Flip Coin">
+
+    </Button>
+
+</RelativeLayout>
